# ecsast

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  readme.md  readme.txt
examples/: add.ecs  args.ecs  boolean_logic.ecs  fibonacci.ecs  fizzbuzz.ecs  mutual_recursion.ecs  nested_loops.ecs  precedence.ecs
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  passes.rs  printer.rs  span.rs
src/codegen/: emit.rs  link.rs  runtime.rs
stress/: big_blocks.ecs  gen_big_blocks.py
tests/: compile_and_run.rs  interpreter.rs
tests/programs/add/: expected_output  source.ecs
tests/programs/args/: source.ecs
tests/programs/arithmetic/: source.ecs
tests/programs/bitwise/: expected_output  source.ecs
tests/programs/boolean_logic/: expected_output
tests/programs/collatz/: expected_output  source.ecs
tests/programs/fibonacci/: expected_output
tests/programs/float_arithmetic/: expected_output  source.ecs
tests/programs/mutual_recursion/: expected_output
tests/programs/nested_loops/: expected_output
tests/programs/power/: expected_output  source.ecs
tests/programs/precedence/: expected_output
tests/programs/stress/: source.ecs
tests/programs/stress_big_blocks/: expected_output
