[package]
name = "ecsast"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3"
slotmap = "1"
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-module = "0.128"
cranelift-object = "0.128"
target-lexicon = "0.13"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
